Bug 241343 - Running KBuildSysCoca4 while widget browser is up makes it lose all its icons
Summary: Running KBuildSysCoca4 while widget browser is up makes it lose all its icons
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget explorer (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-10 22:09 UTC by David Hubner
Modified: 2011-12-04 15:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the bug with the missing icons (80.89 KB, image/png)
2010-06-11 16:31 UTC, Nicolas L.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Hubner 2010-06-10 22:09:00 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Running KBuildSysCoca4 while widget browser is up makes it lose all its icons and you have to close it and open it again for it to become usable again.

Reproducible: Always

Steps to Reproduce:
Run KBuildSysCoca4 while the widget browser is up, or before and then open it.

Actual Results:  
Messy widget browser

Expected Results:  
Nice non messy widget browser.
Comment 1 Marco Martin 2010-06-10 22:53:21 UTC
doesn't seem to happen here
Comment 2 Aaron J. Seigo 2010-06-11 01:57:27 UTC
@Marco: probably because nothing changed in your installed .desktop files when you run it, so the databaseChanged signal was never emitted. :)

and yes, i've seen this as well. needs to get addressed for 4.5
Comment 3 Aaron J. Seigo 2010-06-11 01:57:53 UTC
@David: can you provide a screenshot of what you are seeing? thanks.
Comment 4 Nicolas L. 2010-06-11 16:28:24 UTC
reproduced here on kde 4.5. I am adding a screenshot
Comment 5 Nicolas L. 2010-06-11 16:31:59 UTC
Created attachment 47906 [details]
the bug with the missing icons
Comment 6 Nicolas L. 2010-06-11 16:42:41 UTC
and in addition, the tooltip tells "Unknown applet" for all applet from the list
Comment 7 David Hubner 2010-06-11 21:38:02 UTC
Sorry was out all day. Missed the SS post. 

The SS from Nicolas is exactly what I am seeing as well.
Comment 8 Aaron J. Seigo 2011-12-04 15:50:36 UTC
Git commit 9970392b485e774059517d130764462a82dbff5b by Aaron Seigo.
Committed on 04/12/2011 at 16:40.
Pushed by aseigo into branch 'master'.

correctly repopulate when sycoca changes

BUG:241343

M  +18   -8    libs/plasmagenericshell/widgetsexplorer/appletslist.cpp
M  +1    -3    libs/plasmagenericshell/widgetsexplorer/appletslist.h

http://commits.kde.org/kde-workspace/9970392b485e774059517d130764462a82dbff5b