correctly repopulate when sycoca changes

BUG:241343